# ThematicAtlases

./: .gitignore  ENA_accessions.csv  README.md  create_FibrosisDA.py  pyproject.toml  query_crc  run_accession_metadata_collector.py  run_fibrosis_atlas.py  run_fibrosis_discovery.py  run_leonie_reference_publication_recall.py  run_publication_reviewer.py  run_reference_publication_recall.py  run_reference_set_review.py  test.csv  theme_crc
config/: OR_terms.tsv  fibrosis_discovery_queries.json  filter_groups.tsv  queries.txt  search_terms.tsv
docs/: burndown.md  codebase.md  dev.md  index.md  memory.md  theme_fibrosis.txt
old/config/: filter_groups.tsv  search_terms.tsv
old/docs/: docstring_template.txt
old/src/: create_FibrosisDA.py
old/src/ThematicAtlases/: ThematicAtlas.py
src/: create_FibrosisDA.py
src/ThematicAtlases/: ThematicAtlas.py  ThematicAtlases.py  __init__.py  atlas.py  checkpoint.py  cli_atlas.py  credentials.py  query_catalog.py  review.py  run_archive.py  summary.py  trace.py
src/ThematicAtlases/clients/: __init__.py
src/ThematicAtlases/collector/: __init__.py  collector.py  resume.py
src/ThematicAtlases/curator/: __init__.py  thematic_reviewer.py
src/ThematicAtlases/defense/: defense.py
src/ThematicAtlases/filterer/: __init__.py  filterer.py  resume.py  review.py
src/benchmark_ThematicAtlases/: __init__.py  thematic_reviewer.py
tests/: test_ae_wrapper.py  test_atlas.py  test_benchmark_package.py  test_checkpoint.py  test_cli_atlas.py  test_collector.py  test_credentials.py  test_dependencies.py  test_docs_index.py  test_enrichment_checkpoints.py  test_epmc_wrapper.py  test_filterer.py  test_geo_wrapper.py  test_harmonizer.py  test_metadata_resume.py  test_package.py  test_query_catalog.py  test_readme.py  test_review.py  test_run_accession_metadata_collector.py  test_run_archive.py  test_run_fibrosis_atlas.py  test_run_fibrosis_discovery.py  test_run_leonie_reference_publication_recall.py  test_run_publication_reviewer.py  test_run_reference_publication_recall.py  test_run_reference_set_review.py  test_summary.py  test_thematic_reviewer.py  test_thematic_reviewer_benchmark.py  test_theme_fibrosis.py
(+29 files in other folders)
