[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ThematicAtlases"
version = "0.1.0"
description = "Tools for building thematic atlases of biomedical datasets."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = []
dependencies = [
    "requests>=2.31",
    "meta-standards-converter @ git+https://github.com/jaychowcl/meta_standards_converter.git",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
thematic-atlas = "ThematicAtlases.cli_atlas:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
